--- a/api-reference/action.mdx
+++ b/api-reference/action.mdx
@@ -31,17 +31,17 @@ The `Action` class is designed to create and manage actions to be sent and displ
 import chainlit as cl
 
 @cl.action_callback("action_button")
-def on_action(action):
-    cl.Message(content=f"Executed {action.name}").send()
+async def on_action(action):
+    await cl.Message(content=f"Executed {action.name}").send()
     # Optionally remove the action button from the chatbot user interface
-    action.remove()
+    await action.remove()
 
 @cl.on_chat_start
-def start():
+async def start():
     # Sending an action button within a chatbot message
     actions = [
         cl.Action(name="action_button", value="example_value", description="Click me!")
     ]
 
-    cl.Message(content="Interact with this action button:", actions=actions).send()
+    await cl.Message(content="Interact with this action button:", actions=actions).send()
 ```
