--- a/api-reference/ask/ask-for-input.mdx
+++ b/api-reference/ask/ask-for-input.mdx
@@ -24,7 +24,7 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
 
 ### Returns
 
-<ResponseField name="response" type="str" required>
+<ResponseField name="response" type="AskResponse" required>
   The response of the user.
 </ResponseField>
 
@@ -35,10 +35,10 @@ import chainlit as cl
 
 
 @cl.on_chat_start
-def main():
-    res = cl.AskUserMessage(content="What is your name?", timeout=10).send()
+async def main():
+    res = await cl.AskUserMessage(content="What is your name?", timeout=10).send()
     if res:
-        cl.Message(
+        await cl.Message(
             content=f"Your name is: {res['content']}",
         ).send()
 ```
