--- a/api-reference/langchain/langchain-rename.mdx
+++ b/api-reference/langchain/langchain-rename.mdx
@@ -1,6 +1,7 @@
 ---
 title: "langchain_rename"
 ---
+
 Useful to rename the LangChain tools/chains used in the agent and display more friendly author names in the UI.
 
 ### Parameters
@@ -15,7 +16,8 @@ Useful to rename the LangChain tools/chains used in the agent and display more f
   The renamed author
 </ResponseField>
 
-<RequestExample>
+### Usage
+
 ```python Code Example
 from langchain import OpenAI, LLMMathChain
 import chainlit as cl
@@ -28,11 +30,11 @@ def rename(orig_author: str):
 
     return rename_dict.get(orig_author, orig_author)
 
-@cl.langchain_factory
+@cl.langchain_factory(use_async=True)
 def load():
     llm = OpenAI(temperature=0)
     llm_math = LLMMathChain.from_llm(llm=llm)
 
     return llm_math
+
 ```
-</RequestExample>
