--- a/api-reference/langchain/langchain-run.mdx
+++ b/api-reference/langchain/langchain-run.mdx
@@ -16,7 +16,7 @@ The response will NOT be automatically sent to the UI, you need to send a [Messa
   The message coming from the UI.
 </ParamField>
 
-### Usage
+### Run a async agent
 
 ```python Code Example
 from langchain import OpenAI, LLMChain, PromptTemplate
@@ -25,7 +25,7 @@ import chainlit as cl
 prompt_template = "{input}?"
 
 
-@cl.langchain_factory
+@cl.langchain_factory(use_async=True)
 def main():
     llm = OpenAI(temperature=0)
     chain = LLMChain(llm=llm, prompt=PromptTemplate.from_template(prompt_template))
@@ -33,7 +33,29 @@ def main():
 
 
 @cl.langchain_run
-def run(agent, input_str):
-    res = agent("2+2")
-    cl.Message(content=res["text"]).send()
+async def run(agent, input_str):
+    res = await agent.acall(input_str, callbacks=[cl.AsyncChainlitCallbackHandler()])
+    await cl.Message(content=res["text"]).send()
+```
+
+### Run an sync agent
+
+```python Code Example
+from langchain import OpenAI, LLMChain, PromptTemplate
+import chainlit as cl
+
+prompt_template = "{input}?"
+
+
+@cl.langchain_factory(use_async=False)
+def main():
+    llm = OpenAI(temperature=0)
+    chain = LLMChain(llm=llm, prompt=PromptTemplate.from_template(prompt_template))
+    return chain
+
+
+@cl.langchain_run
+async def run(agent, input_str):
+    res = await cl.asyncify(agent)(input_str, callbacks=[cl.ChainlitCallbackHandler()])
+    await cl.Message(content=res["text"]).send()
 ```
