--- a/examples/openai-sql.mdx
+++ b/examples/openai-sql.mdx
@@ -55,21 +55,24 @@ Then, we send back the answer to the UI with the [Message](/api-reference/messag
 
 ```python app.py
 @cl.on_message
-def main(message: str):
+async def main(message: str):
     fromatted_prompt = prompt.format(input=message)
-    response = openai.Completion.create(
-        model=model_name,
-        prompt=fromatted_prompt,
-        **settings
-    )
-    content = response["choices"][0]["text"]
 
-    cl.Message(
-        content=content,
+    # Prepare the message for streaming
+    msg = cl.Message(
+        content="",
         language="sql",
         prompt=fromatted_prompt,
-        llm_settings=cl.LLMSettings(model_name=model_name, **settings)
-    ).send()
+        llm_settings=cl.LLMSettings(model_name=model_name, **settings),
+    )
+
+    async for stream_resp in await openai.Completion.acreate(
+        model=model_name, prompt=fromatted_prompt, stream=True, **settings
+    ):
+        token = stream_resp.get("choices")[0].get("text")
+        await msg.stream_token(token)
+
+    await msg.send()
 ```
 
 ## Try it out
