--- a/langchain.mdx
+++ b/langchain.mdx
@@ -32,7 +32,7 @@ template = """Question: {question}
 
 Answer: Let's think step by step."""
 
-@cl.langchain_factory
+@cl.langchain_factory(use_async=True)
 def factory():
     prompt = PromptTemplate(template=template, input_variables=["question"])
     llm_chain = LLMChain(prompt=prompt, llm=OpenAI(temperature=0), verbose=True)
