--- a/pure-python.mdx
+++ b/pure-python.mdx
@@ -26,14 +26,13 @@ import chainlit as cl
 
 
 @cl.on_message
-def main(message: str):
+async def main(message: str):
     # Your custom logic goes here...
 
     # Send a response back to the user
-    cl.Message(
+    await cl.Message(
         content=f"Received: {message}",
     ).send()
-
 ```
 
 The `main` function will be called every time a user inputs a message in the chatbot UI. You can put your custom logic within the function to process the user's input, such as analyzing the text, calling an API, or computing a result.
