update to make_async

--- a/api-reference/langchain/langchain-run.mdx
+++ b/api-reference/langchain/langchain-run.mdx
@@ -55,7 +55,7 @@ def main():
 
 @cl.langchain_run
 async def run(agent, input_str):
-    res = await cl.asyncify(agent)(input_str, callbacks=[cl.ChainlitCallbackHandler()])
+    res = await cl.make_async(agent)(input_str, callbacks=[cl.ChainlitCallbackHandler()])
     await cl.Message(content=res["text"]).send()
 ```
 
