--- a/api-reference/langchain/callbacks.mdx
+++ b/api-reference/langchain/callbacks.mdx
@@ -27,7 +27,7 @@ Alternatively, you can pass a synchronous callback handler, as shown in the exam
 ```python
 @cl.langchain_run
 async def run(agent, input_str):
-    res = await cl.asyncify(agent)(input_str, callbacks=[cl.ChainlitCallbackHandler()])
+    res = await cl.make_async(agent)(input_str, callbacks=[cl.ChainlitCallbackHandler()])
     await cl.Message(content=res["text"]).send()
 ```
 
