--- a/examples/auto-gpt.mdx
+++ b/examples/auto-gpt.mdx
@@ -61,26 +61,29 @@ embedding_size = 1536
 index = faiss.IndexFlatL2(embedding_size)
 
 
-# Create the agent with the chainlit decorator
-@cl.langchain_factory
+# The search tool has no async implementation, we fall back to sync
+@cl.langchain_factory(use_async=False)
 def agent():
     vectorstore = FAISS(embeddings_model.embed_query, index, InMemoryDocstore({}), {})
+    callbacks = [cl.ChainlitCallbackHandler()]
     agent = AutoGPT.from_llm_and_tools(
         ai_name="Tom",
         ai_role="Assistant",
         tools=tools,
-        llm=ChatOpenAI(temperature=0, streaming=True),
+        llm=ChatOpenAI(temperature=0, streaming=True, callbacks=callbacks),
         memory=vectorstore.as_retriever(),
     )
     # Set verbose to be true
     agent.chain.verbose = True
+    agent.chain.callbacks = callbacks
     return agent
 
 
 @cl.langchain_run
-def run(agent, input):
-    res = agent.run([input])
-    cl.Message(content=res).send()
+async def run(agent, input):
+    # Since the agent is sync, we need to make it async
+    res = await cl.make_async(agent.run)([input])
+    await cl.Message(content=res).send()
 ```
 
 Here you can see [langchain_run](/api-reference/langchain-run) and [langchain_factory](/api-reference/langchain-factory) were used.
