update langchain intro

--- a/langchain.mdx
+++ b/langchain.mdx
@@ -21,7 +21,14 @@ Create a new Python file named `app.py` in your project directory. This file wil
 
 In `app.py`, import the necessary packages and define a factory function decorated with [@cl.langchain_factory](/api-reference/langchain/langchain-factory) that returns any LangChain instance. In this tutorial, we are going to use `LLMChain` to keep it simple. Here's the basic structure of the script:
 
-```python
+<Note>
+  If your agent does not have an async implementation, fallback to the sync
+  implementation.
+</Note>
+
+<CodeGroup>
+
+```python Async
 import os
 from langchain import PromptTemplate, OpenAI, LLMChain
 import chainlit as cl
@@ -39,6 +46,27 @@ def factory():
 
     return llm_chain
 ```
+
+```python Sync
+import os
+from langchain import PromptTemplate, OpenAI, LLMChain
+import chainlit as cl
+
+os.environ["OPENAI_API_KEY"] = "YOUR_OPEN_AI_API_KEY"
+
+template = """Question: {question}
+
+Answer: Let's think step by step."""
+
+@cl.langchain_factory(use_async=False)
+def factory():
+    prompt = PromptTemplate(template=template, input_variables=["question"])
+    llm_chain = LLMChain(prompt=prompt, llm=OpenAI(temperature=0), verbose=True)
+
+    return llm_chain
+```
+
+</CodeGroup>
 
 This function sets up an instance of `LLMChain` with a custom `PromptTemplate`. The `LLMChain` is responsible for generating responses based on the input provided by users.
 
