add google app engine deploy example

--- a/cloud/deploy.mdx
+++ b/cloud/deploy.mdx
@@ -7,4 +7,5 @@ title: Deploy
 ## Self-host
 
 - on [Fly.io](https://dev.to/willydouhard/how-to-deploy-your-chainlit-app-to-flyio-38ja)
-- on [Google Cloud](https://pseudohvr.medium.com/deploying-chainlit-on-gcp-72231ba6b77f)
+- on [Google Cloud Run](https://pseudohvr.medium.com/deploying-chainlit-on-gcp-72231ba6b77f)
+- on [Google App Engine](https://github.com/amjadraza/langchain-chainlit-docker-deployment-template)
