add self host deployment warning

--- a/cloud/deploy.mdx
+++ b/cloud/deploy.mdx
@@ -6,6 +6,12 @@ title: Deploy
 
 ## Self-host
 
+<Warning>
+  Currently, you have to serve your Chainlit app from the root of your
+  domain/subdomain. This means that you can't serve it from a subdirectory like
+  `example.com/my-app`.
+</Warning>
+
 - on [Fly.io](https://dev.to/willydouhard/how-to-deploy-your-chainlit-app-to-flyio-38ja)
 - on [Google Cloud Run](https://pseudohvr.medium.com/deploying-chainlit-on-gcp-72231ba6b77f)
 - on [Google App Engine](https://github.com/amjadraza/langchain-chainlit-docker-deployment-template)
