--- a/concepts/elements.mdx
+++ b/concepts/elements.mdx
@@ -43,7 +43,7 @@ import chainlit as cl
 @cl.on_chat_start
 async def start():
     # Send the elements globally
-    await cl.LocalImage(path="./cat.jpeg", name="image1", display="inline").send()
+    await cl.Image(path="./cat.jpeg", name="image1", display="inline").send()
     await cl.Text(content="Here is a side text document", name="text1", display="side").send()
     await cl.Text(content="Here is a page text document", name="text2", display="page").send()
 
@@ -82,7 +82,7 @@ async def start():
     ).send()
 
     elements = [
-        cl.LocalImage(path="./cat.jpeg", name="image1", display="inline"),
+        cl.Image(path="./cat.jpeg", name="image1", display="inline"),
         cl.Text(content="Here is a side text document", name="text1", display="side"),
         cl.Text(content="Here is a page text document", name="text2", display="page"),
     ]
