--- a/langchain.mdx
+++ b/langchain.mdx
@@ -49,7 +49,8 @@ def factory():
 
 ```python Sync
 import os
-from langchain import PromptTemplate, OpenAI, LLMChain
+from langchain import PromptTemplate, LLMChain
+from langchain.chat_models import ChatOpenAI
 import chainlit as cl
 
 os.environ["OPENAI_API_KEY"] = "YOUR_OPEN_AI_API_KEY"
@@ -61,7 +62,7 @@ Answer: Let's think step by step."""
 @cl.langchain_factory(use_async=False)
 def factory():
     prompt = PromptTemplate(template=template, input_variables=["question"])
-    llm_chain = LLMChain(prompt=prompt, llm=OpenAI(temperature=0), verbose=True)
+    llm_chain = LLMChain(prompt=prompt, llm=ChatOpenAI(temperature=0, streaming=True))
 
     return llm_chain
 ```
