--- a/concepts/chain-of-thought.mdx
+++ b/concepts/chain-of-thought.mdx
@@ -13,6 +13,8 @@ It's evident that several intermediate steps are needed to answer the initial qu
 
 Chainlit simplifies this process by enabling you to visualize and navigate through these otherwise complicated reasoning pathways.
 
+<Note>You can hide the chain of thought by setting the `hide_cot` parameter to true in your config file!</Note>
+
 ## How it works
 
 If you are using the [LangChain integration](/langchain), every intermediary step is automatically sent and displayed in the Chainlit UI.
