--- a/cloud/deploy.mdx
+++ b/cloud/deploy.mdx
@@ -15,3 +15,4 @@ title: Deploy
 - on [Fly.io](https://dev.to/willydouhard/how-to-deploy-your-chainlit-app-to-flyio-38ja)
 - on [Google Cloud Run](https://pseudohvr.medium.com/deploying-chainlit-on-gcp-72231ba6b77f)
 - on [Google App Engine](https://github.com/amjadraza/langchain-chainlit-docker-deployment-template)
+- on [Replit](https://replit.com/@DanConstantini/Build-a-Chatbot-with-OpenAI-LangChain-and-Chainlit?v=1)
