--- a/examples/mrkl.mdx
+++ b/examples/mrkl.mdx
@@ -2,7 +2,7 @@
 title: MRKL
 ---
 
-Example inspired from the [LangChain doc](https://python.langchain.com/en/latest/modules/agents/agents/examples/mrkl_chat.html)
+Example inspired from the [LangChain doc](https://python.langchain.com/docs/modules/agents/how_to/mrkl)
 
 ## Prerequisites
 
